# IJEPA-JSON

./: .gitignore  paper-arxiv.docx
main/: README.md  to-be-proven-research-paper.docx
main/configs/slam/: orb_slam3_config.yaml
main/experiments/paper_experiments/Main_Experiments/: evaluation_episodes.json  run_navigation_experiments.py
main/experiments/paper_experiments/Main_Experiments/policies/: straight_turn_policy.py
main/experiments/paper_experiments/Main_Experiments/policies/ours_full/: ours_full_policy.py  run_ours_full_action_pipeline.py  (+1 more)
main/experiments/paper_experiments/plots/: trajectory_plot - Shortcut.lnk
main/experiments/results/: hm3d_semantic_objects_official.json  owl_scene_scan_results.json  task_store_current.json  working_waypoint_test.py
main/experiments/results/logs/: navigation_experiments.csv
main/experiments/results/predictions/: final_predictions.json
main/experiments/results/tree_of_thoughts/: tree_of_thoughts_20251203_032425.json  tree_of_thoughts_20251203_051245.json  tree_of_thoughts_20251203_061534.json  tree_of_thoughts_20251203_062336.json  tree_of_thoughts_20251203_063426.json  tree_of_thoughts_20251203_064353.json  tree_of_thoughts_20251203_070024.json  tree_of_thoughts_20251203_071803.json  tree_of_thoughts_20251203_072150.json  tree_of_thoughts_20251203_072420.json  tree_of_thoughts_20251203_072821.json  tree_of_thoughts_20251203_075332.json  tree_of_thoughts_20251203_075941.json  tree_of_thoughts_20251203_080215.json  tree_of_thoughts_20251203_080635.json
main/experiments/scripts/: hm3d_extractor.py  main_orchestrator.py  run_action_pipeline.py  run_perception_pipeline.py  run_prediction_pipeline.py  run_reasoning_pipeline.py
main/src/action_pipeline/: action_executor.py
main/src/perception_pipeline/: CMakeLists.txt  orb_slam_integration.py  orbslam_pybind.cpp  owl_integration.py
main/src/prediction_pipeline/: collision_risk_predictor.py  ijepa_integration_predictor.py  ijepa_prototypes.json  run_ijepa_for_prototypes.py
main/src/reasoning_planning_pipeline/: spatial_reasoning_integration.py  tree_of_thoughts_integration.py
main/src/stores/: central_map_store.py  frame_buffer.py  habitat_store.py  prediction_store.py  task_store.py  user_command_store.py
(+4 files in other folders)
